correccin section video

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@ form{
 	color: #006191;
 	margin-bottom: 60px;
 }
+#video h3 {
+	color: #006191;
+	margin-bottom: 60px;
+}
 
 #servicios ul li {
 	list-style: none;
